Wed Jan 25 18:56:44 CET 2012 (tk)
---------------------------------
 * libclamav: fix macro detection in OLE2BlockMacros (bb#4269)

Wed Mar 31 18:07:05 CEST 2010 (acab)
------------------------------------
  * libclamav/7z: add recovery mode to 7z ansi

Tue Jan 17 11:15:57 CET 2012 (acab)
-----------------------------------
 * misc: performance improvement for HP-UX PA-RISC - patch from 
	 Michael Pelletier <michael.v.pelletier*raytheon.com> (bb#3926)

Sun Jan  8 19:26:06 CET 2012 (acab)
-----------------------------------
 * libclamav: add preliminary support for MS Authenticode signatures,
	      both embedded and from cat files. Ideally, for windows
	      users, it should be sufficient to add the option
              -d %WINDIR%\system32\{F750E6C3-38EE-11D1-85E5-00C04FC295EE}
	      to clamscan.

Thu Nov  3 22:42:28 CET 2011 (acab)
-----------------------------------
 * libclamav/lzma_iface.c: stfu on (but still refuse) big lzma allocs

Tue Nov  1 12:26:46 CET 2011 (acab)
-----------------------------------
 * libclamav: Add 7z SFX support (b#3063)

Thu Dec 15 21:40:57 CET 2011 (tk)
---------------------------------
 * libclamav/matcher-ac.c: improve negation of single elements - handle
			   !(xx) (bb#4052)

Thu Dec 15 18:34:03 EET 2011 (edwin)
------------------------------------
 * libclamav/pdf.c: scan inside encrypted PDF streams and strings when user
		    password is empty (bb #2794).

Fri Dec  9 16:41:05 CET 2011 (tk)
---------------------------------
 * libclamav/matcher.c: add new offset modifier SEx (bb#4008)

Thu Dec  1 15:07:49 CET 2011 (tk)
---------------------------------
 * libclamav/readdb.c: allow comments in all db files (bb#3930)

Tue Nov 22 19:07:47 CET 2011 (acab)
-----------------------------------
 * libclamav/io9660.c: properly dump to temp file

Fri Nov 18 15:23:50 CET 2011 (tk)
---------------------------------
 * libclamav/scanners.c: use lsigs when scanning vba data (bb#3922)

Fri Nov 18 15:48:59 EET 2011 (edwin)